--- a/Views/Notice/Preview.cshtml
+++ b/Views/Notice/Preview.cshtml
@@ -4,6 +4,7 @@
 @{
     ViewData["Title"] = "Preview";
 }
+<script src="~/js/connectMedia.js"></script>
 
 <div class="noticePreview">
     <div class="bg">
@@ -34,6 +35,15 @@
         </div>
         <div class="adminnotice">
             admin Content
+        </div><div class="adminnotice">
+            admin Content
+        </div><div class="weather-section">
+            weather Content
+        </div><div class="sport-section">
+            sport Content
+        </div>
+        <div class="news-section">
+            New Content
         </div>
         <div class="adminbtmboxes">
             <div class="card col-md-4 mb-0">
