--- a/wwwroot/css/connectmedia.css
+++ b/wwwroot/css/connectmedia.css
@@ -272,7 +272,7 @@ canvas#pdfViewer {
         border: 0;
         padding: 0.5rem 0.5rem;
         margin: 0 auto;
-        width: 22%;
+        max-width: 22%;
         text-align: center;
         background-color: #E0E5EC;
         box-shadow: 9px 9px 16px rgba(163,177,198,0.6), -9px -9px 16px rgba(255,255,255, 0.5);
