--- a/Views/Notice/Preview.cshtml
+++ b/Views/Notice/Preview.cshtml
@@ -6,12 +6,12 @@
 }
 <script src="~/js/connectMedia.js"></script>
 
-<div class="noticePreview">
+@*<div class="noticePreview">
     <div class="bg">
         @Html.Raw(Model.Content);
 
     </div>
-</div>
+</div>*@
 
 
 
