--- a/ConnectMedia/Views/Shared/_Layout.cshtml
+++ b/ConnectMedia/Views/Shared/_Layout.cshtml
@@ -96,5 +96,10 @@
     <!-- Style switcher -->
     <!-- ============================================================== -->
     <script src="~/assets/plugins/styleswitcher/jQuery.style.switcher.js"></script>
+    <script>
+        $('.carousel').carousel({
+            interval: 100000
+        })
+    </script>
 </body>
 </html>
