--- a/ConnectMedia/Views/WebView/Preview.cshtml
+++ b/ConnectMedia/Views/WebView/Preview.cshtml
@@ -50,7 +50,6 @@
             </div>
             <div class="currentWeather">
                 weather
-
             </div>
             <div class="currentDate">
                 date
@@ -62,14 +61,23 @@
                 <!--Slides-->
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
+                        admin videos upload gose here
                         <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(88).jpg"
                              alt="First slide">
                     </div>
                     <div class="carousel-item">
+                        weather api view
                         <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(121).jpg"
                              alt="Second slide">
                     </div>
                     <div class="carousel-item">
+                        Api 3 view
+                        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(31).jpg"
+                             alt="Third slide">
+                    </div>
+                    
+                    <div class="carousel-item">
+                        Api 4 view
                         <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(31).jpg"
                              alt="Third slide">
                     </div>
@@ -94,7 +102,13 @@
                         <div class="icon">
                             <img src="https://mdbootstrap.com/img/Photos/Others/Carousel-thumbs/img%20(31).jpg" width="100">
                         </div>
-                        <h3 class="sm-heading">Weather</h3>
+                        <h3 class="sm-heading">API 3</h3>
+                    </li>
+                    <li data-target="#carousel-thumb" data-slide-to="3">
+                        <div class="icon">
+                            <img src="https://mdbootstrap.com/img/Photos/Others/Carousel-thumbs/img%20(31).jpg" width="100">
+                        </div>
+                        <h3 class="sm-heading">API 4</h3>
                     </li>
                 </ol>
             </div>
