--- a/ConnectMedia/Views/Notice/Create.cshtml
+++ b/ConnectMedia/Views/Notice/Create.cshtml
@@ -13,86 +13,88 @@
             <div class="form-group">
                 <input asp-for="noticeDTO.Id" class="form-control" hidden />
             </div>
-            <div class="form-group">
-                <label class="control-label">Content</label>
-                <textarea type="text" class="form-control ckeditor" asp-for="noticeDTO.Content" id="Content" rows="5" placeholder="Content"></textarea>
-                <span asp-validation-for="noticeDTO.Content" class="text-danger"></span>
 
-            </div>
-            <div class="form-group">
-                <label class="control-label">Duration(sec)</label>
-                <input type="number" class="form-control" asp-for="noticeDTO.Duration" id="Duration" rows="5" placeholder="60" />
-                <span asp-validation-for="noticeDTO.Duration" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Start</label>
-                <input type="date" class="form-control" asp-for="noticeDTO.StartDate" id="StartDate" />
-                <span asp-validation-for="noticeDTO.StartDate" class="text-danger"></span>
+            <div id="example-basic">
+                <h3>Notice Message</h3>
+                <section class="notice-step">
+                    <div class="form-group">
+                        @*<label class="control-label">Content</label>*@
+                        <textarea type="text" class="form-control ckeditor" asp-for="noticeDTO.Content" id="Content" rows="5" placeholder="Content"></textarea>
+                        <span asp-validation-for="noticeDTO.Content" class="text-danger"></span>
+                    </div>
+                </section>
+                <h3>Schedule</h3>
+                <section class="schedule-step">
+                    <div class="form-group">
+                        <label class="control-label">Duration(sec)</label>
+                        <input type="number" class="form-control" asp-for="noticeDTO.Duration" id="Duration" rows="5" placeholder="60" />
+                        <span asp-validation-for="noticeDTO.Duration" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Start</label>
+                        <input type="date" class="form-control" asp-for="noticeDTO.StartDate" id="StartDate" />
+                        <span asp-validation-for="noticeDTO.StartDate" class="text-danger"></span>
 
-                <input type="time" class="form-control" asp-for="noticeDTO.StartTime" id="StartTime" />
-                <span asp-validation-for="noticeDTO.StartTime" class="text-danger"></span>
+                        <input type="time" class="form-control" asp-for="noticeDTO.StartTime" id="StartTime" />
+                        <span asp-validation-for="noticeDTO.StartTime" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Expire</label>
+                        <input type="checkbox" class="form-control" asp-for="noticeDTO.Expire" id="Expire" />
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">End</label>
+                        <input type="date" class="form-control" asp-for="noticeDTO.EndDate" id="EndDate" />
+                        <span asp-validation-for="noticeDTO.EndDate" class="text-danger"></span>
 
+                        <input type="time" class="form-control" asp-for="noticeDTO.EndTime" id="EndTime" />
+                        <span asp-validation-for="noticeDTO.EndTime" class="text-danger"></span>
 
-            </div>
-            <div class="form-group">
-                <label class="control-label">Expire</label>
-                <input type="checkbox" class="form-control" asp-for="noticeDTO.Expire" id="Expire" />
-            </div>
-            <div class="form-group">
-                <label class="control-label">End</label>
-                <input type="date" class="form-control" asp-for="noticeDTO.EndDate" id="EndDate" />
-                <span asp-validation-for="noticeDTO.EndDate" class="text-danger"></span>
-
-                <input type="time" class="form-control" asp-for="noticeDTO.EndTime" id="EndTime" />
-                <span asp-validation-for="noticeDTO.EndTime" class="text-danger"></span>
-
-            </div>
-            @*<div class="form-group">
-                    <label class="control-label">Playlist</label>
-                    <select asp-for="noticeDTO.PlayList"
-                            asp-items="@(new MultiSelectList(Model.playlistDropdownList,"Value","Text"))"
-                            class="form-control">
-                        <option>Select playlist type</option>
-                    </select>
-                    <span asp-validation-for="noticeDTO.PlayList" class="text-danger"></span>
-                </div>*@
-
-            <div class="form-group">
+                    </div>
+                    @*<div class="form-group">
                 <label class="control-label">Playlist</label>
                 <select asp-for="noticeDTO.PlayList"
                         asp-items="@(new MultiSelectList(Model.playlistDropdownList,"Value","Text"))"
-                        class="custom-select form-control" id="inlineFormCustomSelect">
-                    <option selected="">Select playlist type</option>
+                        class="form-control">
+                    <option>Select playlist type</option>
                 </select>
                 <span asp-validation-for="noticeDTO.PlayList" class="text-danger"></span>
+            </div>*@
+
+                    <div class="form-group">
+                        <label class="control-label">Playlist</label>
+                        <select asp-for="noticeDTO.PlayList"
+                                asp-items="@(new MultiSelectList(Model.playlistDropdownList,"Value","Text"))"
+                                class="custom-select form-control" id="inlineFormCustomSelect">
+                            <option selected="">Select playlist type</option>
+                        </select>
+                        <span asp-validation-for="noticeDTO.PlayList" class="text-danger"></span>
+                    </div>
+                </section>
+                <h3>Notice Info</h3>
+                <section class="save-step">
+                    <div class="form-group">
+                        <label asp-for="noticeDTO.Name " class="control-label"></label>
+                        <input asp-for="noticeDTO.Name" class="form-control" />
+                        <span asp-validation-for="noticeDTO.Name" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Category</label>
+                        <select asp-for="noticeDTO.CategoryId"
+                                asp-items="@(new SelectList(Model.categoryDropdownList,"Value","Text"))"
+                                class="form-control">
+                            <option>Select category type</option>
+                        </select>
+                        <span asp-validation-for="noticeDTO.CategoryId" class="text-danger"></span>
+                    </div>
+                </section>
             </div>
 
 
-            <div class="form-group">
-                <label class="control-label">Category</label>
-                <select asp-for="noticeDTO.CategoryId"
-                        asp-items="@(new SelectList(Model.categoryDropdownList,"Value","Text"))"
-                        class="form-control">
-                    <option>Select category type</option>
-                </select>
-                <span asp-validation-for="noticeDTO.CategoryId" class="text-danger"></span>
-            </div>
+           
 
 
-            <div class="form-group">
-                <label asp-for="noticeDTO.Name " class="control-label"></label>
-                <input asp-for="noticeDTO.Name" class="form-control" />
-                <span asp-validation-for="noticeDTO.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Category</label>
-                <select asp-for="noticeDTO.CategoryId"
-                        asp-items="@(new SelectList(Model.categoryDropdownList,"Value","Text"))"
-                        class="form-control">
-                    <option>Select category type</option>
-                </select>
-                <span asp-validation-for="noticeDTO.CategoryId" class="text-danger"></span>
-            </div>
+            
             <div class="form-actions">
                 <button type="submit" class="btn btn-success"> <i class="fa fa-check"></i> Save</button>
                 <button type="button" class="btn btn-inverse">Cancel</button>
@@ -101,4 +103,5 @@
         </form>
     </div>
 </div>
+
 
