--- a/ConnectMedia/Views/Notice/Preview.cshtml
+++ b/ConnectMedia/Views/Notice/Preview.cshtml
@@ -25,12 +25,12 @@
                 <div class="carousel-item active">
                     @Html.Raw(Model.Content);
                 </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="..." alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="..." alt="Third slide">
-                </div>
+@*<div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Second slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Third slide">
+        </div>*@
             </div>
         </div>
         <!--/.Carousel Wrapper-->
@@ -54,18 +54,25 @@
         </div>
         <div class="adminnotice">
             <!--Carousel Wrapper-->
-            <div id="carousel-thumb" class="carousel slide carousel-fade carousel-thumbnails preview-box-slider" data-ride="carousel">
+            <div id="carousel-thumb" class="carousel slide carousel-fade carousel-thumbnails preview-box-slider" >
                 <!--Slides-->
                 <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active">
-                        admin videos upload gose here
-                        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(88).jpg"
-                             alt="First slide">
+                    <div class="carousel-item active">                   
+                        <iframe width="560"
+                                height="315"
+                                src="@ViewBag.CurrrentNotice"
+                                frameborder="0"
+                                allowfullscreen></iframe>
                     </div>
                     <div class="carousel-item">
                         weather api view
-                        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(121).jpg"
-                             alt="Second slide">
+                        @*<img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(121).jpg"
+                             alt="Second slide">*@
+
+                        <a class="weatherwidget-io" href="https://forecast7.com/en/51d25n85d32/ontario/" data-label_1="ONTARIO" data-label_2="WEATHER" data-mode="Current" data-days="3" data-theme="original">ONTARIO WEATHER</a>
+                        <script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+                        </script>
                     </div>
                     <div class="carousel-item">
                         Api 3 view
