--- a/ConnectMedia/Views/Videos/Create.cshtml
+++ b/ConnectMedia/Views/Videos/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConnectMedia.Common.Model.Videos
+﻿@model ConnectMedia.Common.DTO.VideosDTO
 
 @{
     ViewData["Title"] = "Create";
@@ -11,8 +11,8 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" method="post"  
-      enctype="multipart/form-data">
+        <form asp-action="Create" method="post"
+              enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -21,13 +21,18 @@
             </div>
             <div class="form-group">
                 @*<label asp-for="FileName" class="control-label"></label>
-                <input asp-for="FileName" class="form-control" />*@
+            <input asp-for="FileName" class="form-control" />*@
                 <input type="file" name="file" />
                 @*<span asp-validation-for="FileName" class="text-danger"></span>*@
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+                <label class="control-label">Start</label>
+                <input type="date" class="form-control" asp-for="Date" id="StartDate" />
+                <span asp-validation-for="Date" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
         </form>
     </div>
 </div>
