--- a/ConnectMedia/Views/Videos/Details.cshtml
+++ b/ConnectMedia/Views/Videos/Details.cshtml
@@ -26,7 +26,7 @@
         <dd>
             <iframe width="560"
                     height="315"
-                    src="https://www.youtube.com/watch?v=-mpqAIA8kbs"
+                    src="@Model.FileName"
                     frameborder="0"
                     allowfullscreen></iframe>
         </dd>
