--- a/ConnectMedia/Views/Videos/Edit.cshtml
+++ b/ConnectMedia/Views/Videos/Edit.cshtml
@@ -25,6 +25,11 @@
                 <span asp-validation-for="FileName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label class="control-label">Start</label>
+                <input type="date" class="form-control" asp-for="Date" id="StartDate" />
+                <span asp-validation-for="Date" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
